Fix overflow for mobile devices

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,7 +7,12 @@ html, body, #root, .App {
   height: 100%;
 } 
 
+html {
+  overflow: hidden;
+}
+
 body {
+  overflow: auto;
   margin: 0;
   color: #293264;
   font-family: 'Karla', sans-serif;
